--- a/style/style.css
+++ b/style/style.css
@@ -124,6 +124,55 @@ input[type="text"]:disabled {
     cursor: not-allowed;
 }
 
+.form-check-control {
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
+    cursor: pointer;
+}
+
+input[type=checkbox] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    /* Remove most all native input styles */
+    -moz-appearance: none;
+    appearance: none;
+    /* For iOS < 15 */
+    background-color: #ffffff;
+    /* Not removed via appearance */
+    margin: 0;
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+}
+
+input[type=checkbox]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    -webkit-clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em #007200;
+    /* Windows High Contrast Mode */
+    background-color: CanvasText;
+}
+
+input[type=checkbox]:checked::before {
+    transform: scale(1);
+}
+
+input[type="checkbox"]:hover {
+    cursor: pointer;
+}
+
 textArea:disabled {
     background: #e5e5e5;
     cursor: not-allowed;
@@ -612,6 +661,7 @@ p {
     display: -ms-flexbox;
     display: flex
 }
+
 .content-simple__button {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -738,7 +788,7 @@ p {
 
     .sms-numbers-right {
         height: 540px;
-        padding-top: 55px
+        padding-top: 35px
     }
 }
 
